<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_settings"
          android:title="Settings"
          android:icon="@drawable/ic_settings"
          app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/fifty_seconds"
                android:title="@string/fifty_seconds"
                app:showAsAction="always|withText" />
            <item
                android:id="@+id/seventyfive_seconds"
                android:title="@string/seventyfive_seconds"
                app:showAsAction="always|withText" />
            <item
                android:id="@+id/ninety_seconds"
                android:title="@string/ninety_seconds"
                app:showAsAction="always|withText" />
            <item
                android:id="@+id/two_minutes"
                android:title="@string/two_minutes"
                app:showAsAction="always|withText" />
            <item
                android:id="@+id/three_minutes"
                android:title="@string/three_minutes"
                app:showAsAction="always|withText" />


        </menu>
    </item>

</menu>