<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/time_settings_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/base_time_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="14dp"
            android:text="@string/time_settings_prompt"/>

        <Spinner
            android:id="@+id/time_setting_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/card_settings_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/card_number_prompt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="14dp"
            android:text="@string/card_settings_prompt"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonEight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_eight"/>

            <RadioButton
                android:id="@+id/radioButtonNine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/checkbox_nine"/>
        </RadioGroup>


    </LinearLayout>



</LinearLayout>