<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/card_settings_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/card_number_prompt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="14dp"
            android:text="@string/card_settings_prompt"/>

        <RadioGroup
            android:id="@+id/radioButtonGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonEight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_eight"/>

            <RadioButton
                android:id="@+id/radioButtonNine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/checkbox_nine"/>
        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/word_input_layout_1"
                style="@style/WordInputStyle"
                app:hintEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/word_input_1"
                    style="@style/WordInputEditTextStyle"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/word_input_layout_2"
                style="@style/WordInputStyle"
                app:hintEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/word_input_2"
                    style="@style/WordInputEditTextStyle"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/word_input_layout_3"
                style="@style/WordInputStyle"
                app:hintEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/word_input_3"
                    style="@style/WordInputEditTextStyle"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/word_input_layout_4"
                style="@style/WordInputStyle"
                app:hintEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/word_input_4"
                    style="@style/WordInputEditTextStyle"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/word_input_layout_5"
                style="@style/WordInputStyle"
                app:hintEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/word_input_5"
                    style="@style/WordInputEditTextStyle"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/word_input_layout_6"
                style="@style/WordInputStyle"
                app:hintEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/word_input_6"
                    style="@style/WordInputEditTextStyle"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/word_input_layout_7"
                style="@style/WordInputStyle"
                app:hintEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/word_input_7"
                    style="@style/WordInputEditTextStyle"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/word_input_layout_8"
                style="@style/WordInputStyle"
                app:hintEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/word_input_8"
                    style="@style/WordInputEditTextStyle"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/word_input_layout_9"
                style="@style/WordInputStyle"
                app:hintEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/word_input_9"
                    style="@style/WordInputEditTextStyle"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>



</LinearLayout>